Modifiqué comentarios y reemplacé la creación del elemento img para la imagen del Pokémon por tener el elemento ya creado en el HTML y solo cambiarle el atributo src. También agregué que el input de búsqueda quedé vacío después de realizar esta

--- a/css/styles.css
+++ b/css/styles.css
@@ -42,7 +42,8 @@ body {
   width: 30%;
   flex-direction: column;
   justify-content: space-evenly;
-  align-items: center; }
+  align-items: center;
+  text-align: center; }
 
 #busquedaUsuario {
   width: 60%;
