--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -61,6 +61,7 @@ body {
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
+    text-align: center;
     
     //border: solid 1px red;
 }
