--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -8,12 +8,16 @@ $pokefont: Exo, monospace;
 //ESTRUCTURA
 body {
     display: grid;
-    grid-template-areas: "header" "main" "footer";
-    grid-template-rows: 12% auto 7%;
+    grid-template-areas: 
+    "header" 
+    "main" 
+    "footer";
+    grid-template-rows: 12% auto 0%;
     width: 100vw;
     height: 100vh;
     font-family: $pokefont;
-    background-image: url(../images/fondo.jpg);
+    //border: solid 1px green;
+    //overflow: scroll;
 }
 
 //NAV
@@ -52,11 +56,11 @@ body {
     grid-area: main;
     //border: solid 1px red;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
-    justify-content: space-around;
-    width: 100vw;
-    height: 100%;
+    justify-content: space-evenly;
+    width: 100%;
+    //height: 100%;
 }
 .mainBusqueda {
     //border: solid 1px red;
@@ -65,7 +69,8 @@ body {
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 100%;
+    height: 32rem;
+    background-image: url(../images/pokemon-party.jpg);
 }
 .busquedaBox {
     width: 100%;
@@ -79,8 +84,8 @@ body {
     display: flex;
     border-radius: 5px;
     background-color: rgba($color: #f0f0f0, $alpha: 0.9);
-    height: 30%;
-    width: 40%;
+    height: 35%;
+    width: 30%;
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
@@ -118,7 +123,7 @@ body {
     //border: solid 1px rgb(99, 99, 99);
     font-size: 0.8rem;
     width: 80%;
-    height: 80%;
+    height: 73%;
     border-radius: 5px;
     background-color: rgba($color: #f0f0f0, $alpha: 0.9);
 }
@@ -157,7 +162,88 @@ body {
         }
     }
 }
-
+#listado {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    background-color: #f0f0f0;
+    width: 100%;
+}
+.espacioUno {
+    justify-self: flex-start;
+    width: 13%;
+    background-color: #fbfbfb;
+}
+.espacioDos {
+    justify-self: flex-end;
+    width: 13%;
+    background-color: #fbfbfb;
+}
+.cajaPokemones {
+    width: 74%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    padding: 0.7rem;
+    background-color: rgb(234, 232, 232);
+}
+#listaPoke {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+    grid-template-rows: auto;
+    gap: 0.5rem;
+    width: 100%;
+    padding: 0.5rem;
+    background-color: rgb(234, 232, 232); 
+    height: auto;
+    //border: solid 1px pink
+}
+#cargaMas {
+    display: none;
+    width: 30%;
+    font-family: $pokefont;
+    background-color: #e9692e;
+    border: transparent;
+    border-radius: 5px;
+    height: 1.8rem;
+    margin-top: 1rem;
+}
+.pokeCard {
+    display: flex;
+    flex-direction: column;
+    background-color: rgb(243, 239, 239);
+    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.19);
+    border-radius: 5px;
+    
+    justify-content: space-evenly;
+    width: 100%;
+    //border: solid 1px yellow;
+    height: 10rem;
+    padding-top: 0.5rem;
+    &:hover {
+        transform: scale(1.02);
+    }
+    .imgPeque {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        img {
+            width: 45%;
+            //border: solid 1px black;
+        }
+    }
+    .nombrePeque {
+        width: 100%;
+        height: 20%;
+        font-family: $pokefont;
+        font-size: 0.8rem;
+        //border: solid 1px orange;
+        text-align: center;
+    }
+}
 .footer {
     grid-area: footer;
     /*
