Modifiqué el html, el scss y los assets relacionados con la funcionalidad de favoritos, asimismo el js. Agregué backgrounds con gradientes a los lados de la lista de pokemones. Ajusté medidas de cajas

--- a/css/styles.css
+++ b/css/styles.css
@@ -94,9 +94,22 @@ body {
   align-items: center;
   font-size: 0.8rem;
   width: 80%;
-  height: 73%;
+  height: 77%;
   border-radius: 5px;
   background-color: rgba(240, 240, 240, 0.9); }
+
+#favStar {
+  width: 100%;
+  height: 10%;
+  display: flex;
+  justify-content: end; }
+  #favStar .starCaja {
+    display: flex;
+    justify-content: center;
+    width: 12%;
+    height: auto; }
+    #favStar .starCaja img {
+      width: 60%; }
 
 #imagenPokemon {
   border-radius: 4px;
@@ -135,12 +148,22 @@ body {
 .espacioUno {
   justify-self: flex-start;
   width: 13%;
-  background-color: #fbfbfb; }
+  background: #fbfbfb;
+  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to top, #FFFFFF, #6DD5FA, #4f99ca);
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to top, #FFFFFF, #6DD5FA, #4f99ca);
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */ }
 
 .espacioDos {
   justify-self: flex-end;
   width: 13%;
-  background-color: #fbfbfb; }
+  background: #2980B9;
+  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to top, #FFFFFF, #6DD5FA, #4f99ca);
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to top, #FFFFFF, #6DD5FA, #4f99ca);
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */ }
 
 .cajaPokemones {
   width: 74%;
@@ -150,6 +173,17 @@ body {
   align-items: center;
   padding: 0.7rem;
   background-color: #eae8e8; }
+
+.listaTitulo {
+  justify-self: flex-start;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  padding: 0.5rem; }
+  .listaTitulo .listHead {
+    align-self: flex-start;
+    border-bottom: solid 1px #e9692e;
+    width: 50%; }
 
 #listaPoke {
   display: grid;
