--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -285,6 +285,99 @@ body {
         text-align: center;
     }
 }
+
+@media only screen and  (max-width: 500px) {
+    * {
+            box-sizing: border-box;
+            margin: 0;
+            padding: 0;
+        }
+    .busquedaBox {
+        border: solid 1px red;
+        height: 50%;
+        width: 100%;
+    }
+    .descripcionBox {
+        height: 50%;
+        width: 100%;
+    }
+    .form {
+        width: 60% !important;
+        height: 60%;
+        font-size: 0.7rem;
+    }
+    .mainBusqueda {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
+    }
+    #descripcion {
+        width: 70%;
+        font-size: 10px;
+        height: 43% !important;
+    }
+    #caracteristicas {
+        height: 40%;
+        font-size: 0.6rem;
+        li {
+            height: 10%;
+        }
+    }
+    #imagenPokemon {
+        width: 30% !important;
+    }
+}
+@media only screen and (max-width: 768px) {
+    * {
+        box-sizing: border-box;
+        margin: 0;
+        padding: 0;
+    }
+
+    .busquedaBox {
+        //border: solid 1px red;
+        height: 50%;
+        width: 100%;
+    }
+
+    .descripcionBox {
+        height: 50%;
+        width: 100%;
+    }
+
+    .form {
+        width: 67% !important;
+        height: 50%;
+        font-size: 0.8rem;
+    }
+
+    /* .mainBusqueda {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
+    } */
+
+    #descripcion {
+        width: 85%;
+        font-size: 10px;
+        height: 50%;
+    }
+
+    #caracteristicas {
+        height: 38%;
+        font-size: 0.7rem;
+
+        li {
+            height: 10%;
+        }
+    }
+
+    #imagenPokemon {
+        width: 40%;
+    }
+}
 .footer {
     grid-area: footer;
     /*
