--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -293,7 +293,7 @@ body {
             padding: 0;
         }
     .busquedaBox {
-        border: solid 1px red;
+        //border: solid 1px red;
         height: 50%;
         width: 100%;
     }
